# NecroBot

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  necrobot.cpp
src/capture/: CMakeLists.txt  screenshot.cpp  screenshot.hpp
src/detection/: CMakeLists.txt  capture.cpp  capture.h  detect.cpp  detect.h
